<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">Ultra Explorer</string>
    <string name="rename">Rename</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="email">Email</string>
    <string name="zip">Zip it</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="properties">Properties</string> 
    <string name="launch">Launch</string> 
    <string name="uninstall">Uninstall</string> 
    <string name="manage">Manage</string> 
    <string name="backup">Backup</string> 
    <string name="kill">Kill this</string> 
    <string name="info">Process Info</string> 
    <string name="details">Details</string> 
    <string name="market">Market link</string> 
    
     <string name="actionbar_activity_not_found">Failed to open intent...</string>
                       
                     
   
     <!-- ***************************
             Strings for the 'Compressing' and 'Extracting' feature
          *************************** -->
    <string name="compressing_success">Item compressed successfully</string>
    <string name="compressing_error">Could not compress the item</string>
    <string name="compress_into_archive">Compress into archive:</string>
    <string name="extracting_success">Item extracted successfully</string>
    <string name="extracting_error">Could not extract the item</string>
    <string name="extract_into_folder">Extract into folder:</string>
    <string name="extract_title">Select folder to extract into</string>
    <string name="extract_button">Extract here</string>
    <string name="extracting">Extracting files...</string>
    <string name="compressing">Compressing files...</string>
    <string name="warning_overwrite">File %s exists. Do you want to overwrite it?</string>

    <string name="change_file_extension">Do you want to change the file extension?</string>
    <string name="deletefail">could not delete the file</string>
    
   
	    <!--  OI Preferences -->
    
    <!-- Automatically filled in by Launchpad: -->
	<string name="about_translators">translator-credits</string>
	
    <!-- Short explanation of the application (max. 80 characters) -->
    <string name="about_comments">Manage files on the SD card with OI File Manager.</string>  
	
	<!-- ***************************
	     Applicatio-specific strings
	     *************************** -->
	<!-- Name of application. Can be localized. OI = OpenIntents should stay unmodified. -->
    
    <string name="menu_new_folder">New Folder</string>
    
    <!-- Multi select option menu -->
    <string name="menu_multi_select">Multi Select</string>

    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_send">Send</string>
    <string name="menu_open">Open</string>
    <string name="menu_move">Move</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_details">Details</string>
    <string name="menu_more">More</string>
    <string name="menu_compress">Compress (ZIP)</string>
    <string name="menu_extract">Extract (ZIP)</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_include_in_media_scan">Include in media scan</string>
    <string name="menu_exclude_from_media_scan">Exclude from media scan</string>
    <string name="menu_bookmark">Add to bookmarks</string>
    <string name="menu_refresh">Refresh</string>
    
    <string name="create_new_folder">Create new folder</string>
    <string name="folder_name">Folder name</string>
    <string name="file_name">Folder name</string>
    <string name="extension">Extension (with \'.\')</string>
    <string name="this_folder_is_empty">This folder is empty.</string>
    <string name="really_delete">Do you really want to delete %s?</string>
    <string name="file_deleted">File deleted.</string>
    <string name="folder_deleted">Folder deleted.</string>
    <string name="file_renamed">File renamed.</string>
    <string name="folder_renamed">Folder renamed.</string>
    <string name="file_moved">File moved.</string>
    <string name="folder_moved">Folder moved.</string>
    <string name="file_copied">File copied.</string>
    <string name="move_title">Select folder to move to</string>
    <string name="move_button">Move here</string>
    <string name="copy_title">Select folder to copy to</string>
    <string name="copy_button">Copy here</string>
	<string name="deleting_files">Deleting files...</string>
    <string name="title_warning_some_may_not_work">Warning</string>
    <string name="warning_some_may_not_work">Some of the following options may not work.</string>
    <string name="show_warning_again">Show warning again</string>
    
    <!-- Strings for a multi select feature -->
	<string name="really_delete_multiselect">Do you really want to delete %d files?</string>
    <string name="move_button_multiselect">Move</string>
    <string name="copy_button_multiselect">Copy</string>
    <string name="delete_button_multiselect">Delete</string>
    <string name="compress_zip_button_multiselect">ZIP</string>
    <string name="multiselect_title">Select multiple files</string>
    <string name="error_selection">Please select one or more file(s).</string>
    
    <!-- Strings for details table -->
    <string name="details_type">Type</string>
    <string name="details_type_folder">Folder</string>
    <string name="details_type_file">File</string>
    <string name="details_type_other">Other</string>
    <string name="details_size">Size</string>
    <string name="details_permissions">Permissions</string>
    <string name="details_hidden">Hidden</string>
    <string name="details_lastmodified">Last Modified</string>
    <string name="details_yes">Yes</string>
    <string name="details_no">No</string>
    
    <!-- Construct a unique file name of a file called %s. -->
    <string name="copied_file_name">Copy of %s</string>
    
    <!-- Construct a unique file name with number %1$d of a file called %2$s. -->
    <string name="copied_file_name_2">Copy %1$d of %2$s</string>
    
    <string name="media_scan_included">This folder will be included in the next media scan.</string>
    <string name="media_scan_excluded">This folder will be excluded during the next media scan.</string>
    
    <string name="error_creating_new_folder">Could not create new folder.</string>
    <string name="error_deleting_file">Could not delete file.</string>
    <string name="error_deleting_folder">Could not delete folder \'%s\'.</string>
    <string name="error_renaming_file">Could not rename file.</string>
    <string name="error_renaming_folder">Could not rename folder.</string>
    <string name="error_moving_file">Could not move file.</string>
    <string name="error_moving_folder">Could not move folder.</string>
    <string name="error_copying_file">Could not copy file.</string>
    <string name="error_file_does_not_exists">File does not exist.</string>
    <string name="error_deleting_child_file">Could not delete child file \'%s\'.</string>
    <string name="error_generic">An error occurred: </string>
    <string name="error_media_scan">Could not change media scan settings.</string>
    
    <string name="send_not_available">No application available for sending.</string>
    
    <string name="application_not_available">Application not available</string>
    
	<!-- ***************************
	     Preferences
	     *************************** -->
    <!-- Menu item for Settings -->
	<string name="settings">Settings</string>
	
    <!-- Category for preferences. -->
    <string name="preference_advanced_features">Advanced features</string>
	<string name="preference_mediascan_title">Exclude from media scan</string>
    <string name="preference_mediascan_summary_on">Show menu item to exclude folders from media scan.</string>
    <string name="preference_mediascan_summary_off">Hide menu item to exclude folders from media scan.</string>
    
    <string name="preference_showallwarning_title">Show all warnings</string>
    <string name="preference_showallwarning_summary_on">Show all warning messages</string>
    <string name="preference_showallwarning_summary_off">Suppress warning messages</string>
       
    <string name="preference_displayhiddenfiles_title">Display hidden files</string>
    <string name="preference_displayhiddenfiles_summary_on">Display hidden files</string>
    <string name="preference_displayhiddenfiles_summary_off">Hide hidden files</string>
    
    <string name="preference_cachefiles_title">Enable File Cache</string>
    <string name="preference_cachefiles_summary_on">Cache files</string>
    <string name="preference_cachefiles_summary_off">Do Not Cache files</string>
    
    
    <string name="preference_sort_settings">Sort settings</string>
    <string name="preference_sortby">Sort by</string>
    <string name="preference_sortby_ascending">In ascending order</string>
    <string name="preference_sortby_ascending_summary_on">Sort in ascending order</string>
    <string name="preference_sortby_ascending_summary_off">Sort in descending order</string>
    <string-array name="preference_sortby_names">
        <item>Name</item>
        <item>Last modified</item>
        <item>Type</item>
    </string-array>

        
    <!-- ***************************
   		 Strings for the 'Save as' feature
    	 *************************** -->
    <string name="saveas_no_file_picked">You haven\'t picked any file.</string>
    <string name="saveas_error">An error occured.</string>
    <string name="saveas_file_saved">File successfully saved!</string>
    
        
   
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmarks_cancel">Cancel</string>
    <string name="bookmarks_delete">Delete</string>
    <string name="bookmarks_select_to_delete">Select bookmarks to delete</string>
    <string name="bookmarks_manage">Manage bookmarks</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_not_found">Bookmarked destination not found.</string>
    <string name="bookmarks_deleted">Selected bookmarks deleted</string>
    <string name="bookmark_already_exists">This file is already bookmarked</string>

    
	 <string name="gestures_error_loading">Could not load %s. Make sure you have storage available.</string>
    
    

</resources>