<?xml version="1.0" encoding="utf-8"?>


<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
        
    <PreferenceCategory
            android:title="@string/preference_sort_settings">
        
        <ListPreference 
                android:key="sortby"
                android:defaultValue="1"
                android:entries="@array/preference_sortby_names"
                android:entryValues="@array/preference_sortby_names"
                android:title="@string/preference_sortby" />
        
        <CheckBoxPreference
                android:title="@string/preference_sortby_ascending"
                android:key="ascending"
                android:summaryOff="@string/preference_sortby_ascending_summary_off"
                android:summaryOn="@string/preference_sortby_ascending_summary_on"
                android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/preference_advanced_features">

        <CheckBoxPreference
                android:key="mediascan"
                android:defaultValue="false"
                android:title="@string/preference_mediascan_title"
                android:summaryOn="@string/preference_mediascan_summary_on"
                android:summaryOff="@string/preference_mediascan_summary_off" />

        <CheckBoxPreference
                android:key="showallwarning"
                android:defaultValue="true"
                android:title="@string/preference_showallwarning_title"
                android:summaryOn="@string/preference_showallwarning_summary_on"
                android:summaryOff="@string/preference_showallwarning_summary_off" />

        <CheckBoxPreference 
                android:key="displayhiddenfiles"
                android:title="@string/preference_displayhiddenfiles_title"
                android:defaultValue="true"
                android:summaryOff="@string/preference_displayhiddenfiles_summary_off"
                android:summaryOn="@string/preference_displayhiddenfiles_summary_on" />
        
         <CheckBoxPreference 
                android:key="cachefiles"
                android:title="@string/preference_cachefiles_title"
                android:defaultValue="true"
                android:summaryOff="@string/preference_cachefiles_summary_off"
                android:summaryOn="@string/preference_cachefiles_summary_on" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/bookmarks">
        <Preference android:key="editbookmarks" android:title="@string/bookmarks_manage"/>
    </PreferenceCategory>
</PreferenceScreen>
    
